# WinDusky

./: .gitignore  LICENSE
WinDusky/: Cargo.toml  WinDusky.conf.toml  app.manifest  build.rs
WinDusky/src/: auto.rs  color_matrices.rs  config.rs  dusky.rs  effects.rs  gamma.rs  keys.rs  luminance.rs  main.rs  occlusion.rs  presets.rs  rules.rs  tray.rs  types.rs  win_dusky.rs  win_utils.rs
WinDusky/src/dusky/: hooks.rs  hotkeys.rs  overlay.rs  overlay_effect.rs  overlay_fs_effect.rs  overlay_mag.rs
