[package]
name = "win_dusky"
version = "0.0.1"
authors = ["yakrider <yakrider@gmail.com>"]
description = "Impose dark-mode on any window via color transformations"
homepage = "https://github.com/yakrider/WinDusky"
repository = "https://github.com/yakrider/WinDusky"
keywords = ["darkmode", "nightmode", "invert", "ColorMatrix"]
categories = []
edition = "2021"
license = "MIT"
build = "build.rs"


[[bin]]
name = "WinDusky"
path = "src/main.rs"


[package.metadata.winres]
OriginalFilename = "WinDusky.exe"
ProductName = "WinDusky"


[build-dependencies]
winres = "0.1"


[dependencies]
once_cell = "1"
itertools = "0.12"
tray-icon = "0.19"
global-hotkey = "0.6"


[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
]




[lints.clippy]
erasing_op             = "warn"
missing_safety_doc     = "allow"
manual_non_exhaustive  = "allow"
new_without_default    = "allow"
upper_case_acronyms    = "allow"
blocks_in_conditions   = "allow"
needless_else          = "allow"
collapsible_if         = "allow"
collapsible_else_if    = "allow"

