[package]
name = "win_dusky"
version = "0.1.7"
authors = ["yakrider <yakrider@gmail.com>"]
description = "Impose dark-mode on any window via color transformations"
homepage = "https://github.com/yakrider/WinDusky"
repository = "https://github.com/yakrider/WinDusky"
keywords = ["darkmode", "nightmode", "invert", "ColorMatrix"]
categories = []
edition = "2021"
license = "MIT"
build = "build.rs"


[[bin]]
name = "WinDusky"
path = "src/main.rs"


[package.metadata.winres]
OriginalFilename = "WinDusky.exe"
ProductName = "WinDusky"


[build-dependencies]
winres = "0.1"


[dependencies]
#no_deadlocks = "1.3.2"
itertools = "0.14"
tray-icon = "0.20"
image = "0.25"
tao = "0.33"
toml_edit = "0.22.24"
dirs = "6.0.0"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracing-appender = "0.2"
thiserror = "2.0"
atomic_refcell = "0.1"
minifb = "0.28.0"



[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Magnification",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_Storage_Xps",
    "Win32_System_Threading",
    "Win32_Security",
]




[lints.clippy]
erasing_op             = "warn"
missing_safety_doc     = "allow"
manual_non_exhaustive  = "allow"
new_without_default    = "allow"
upper_case_acronyms    = "allow"
blocks_in_conditions   = "allow"
needless_else          = "allow"
collapsible_if         = "allow"
collapsible_else_if    = "allow"
bool_comparison        = "allow"

